completed base for user segments history task
